--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.3.5",
+    "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "^52.0.7",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.5",
+    "expo-router": "^4.0.6",
+    "expo-secure-store": "^14.0.0",
     "expo-splash-screen": "~0.29.10",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
@@ -35,7 +38,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.13",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
@@ -47,6 +50,7 @@
     "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.1",
     "prettier": "^3.3.3",
