--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YWxsb3dlZC1zZXJ2YWwtNTUuY2xlcmsuYWNjb3VudHMuZGV2JA
+DATABASE_URL = postgresql://UberCloneDB_owner:Nb1ykdEP0qLT@ep-shiny-sunset-a7aihyxb.ap-southeast-2.aws.neon.tech/UberCloneDB?sslmode=require
+EXPO_PUBLIC)SERVER_URL = http://uber.com/
