--- a/app.json
+++ b/app.json
@@ -24,12 +24,11 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      "expo-font"
+      ["expo-router", {"origin": "http://uber.com/"}]
     ],
     "experiments": {
       "typedRoutes": true
