--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/clerk-expo": "^2.3.5",
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.2",
+    "@neondatabase/serverless": "^0.10.3",
     "@react-navigation/native": "^6.0.2",
     "expo": "^52.0.7",
     "expo-constants": "~17.0.3",
