add map and location

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YWxsb3dlZC1zZXJ2YWwtNTUuY2xlcmsuYWNjb3
 DATABASE_URL=postgresql://UberCloneDB_owner:Nb1ykdEP0qLT@ep-shiny-sunset-a7aihyxb.ap-southeast-2.aws.neon.tech/UberCloneDB?sslmode=require
 EXPO_PUBLIC_SERVER_URL=http://uber.com/
 EXPO_PUBLIC_GEOAPIFY_API_KEY=1c93d7b2656743368fc7308041d0834b
+EXPO_PUBLIC_GOOGLE_API_KEY=AIzaSyCNTXpd-YiKhEC5XDtjfGfjL0TTa5ZsuIA
