--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
     "expo-local-authentication": "^15.0.1",
+    "expo-location": "^18.0.3",
     "expo-router": "^4.0.7",
     "expo-secure-store": "^14.0.0",
     "expo-splash-screen": "~0.29.10",
@@ -44,7 +45,8 @@
     "react-native-screens": "~4.0.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.13",
-    "tailwindcss-react-native": "^1.7.10"
+    "tailwindcss-react-native": "^1.7.10",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
