--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "^1.20.1",
     "react-native-maps-directions": "^1.9.0",
@@ -45,8 +46,10 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.13",
     "tailwindcss-react-native": "^1.7.10",
+    "uuid": "^3.4.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
