--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@neondatabase/serverless": "^0.10.3",
     "@react-navigation/native": "^6.0.2",
     "@stripe/stripe-react-native": "^0.40.0",
+    "dotenv": "^16.4.7",
     "expo": "^52.0.7",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
